[gd_scene load_steps=4 format=2]

[ext_resource path="res://Player.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5, 4.5 )

[node name="Player" type="Sprite"]
texture = ExtResource( 1 )
offset = Vector2( 0, -2 )
hframes = 4
script = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
visible = false
position = Vector2( -0.5, 2.5 )
shape = SubResource( 1 )

[node name="ShootPoint" type="Position2D" parent="."]
position = Vector2( 8, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
